emulator/tests/snapshots/diagnostics__unclosed_bracket.snap
---
source: emulator/tests/diagnostics.rs
assertion_line: 97
expression: "check_parse_errors(\"    ld [%sp+1, %a\")"
---
error: found ',' expected something else, '*', '/', '+', '-', '<', '>', '&', '|', or ']'
  ┌─ test.S:1:14
  │
1 │     ld [%sp+1, %a
  │              ^
  │              │
  │              found ',' expected something else, '*', '/', '+', '-', '<', '>', '&', '|', or ']'
  │              ',' expected something else, '*', '/', '+', '-', '<', '>', '&', '|', or ']'
